[tool.poetry]
name = "bashbot"
version = "0.1.0"
description = ""
authors = ["rohithollabr"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
pyte = "^0.8.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
